--- a/employee-impl/src/main/resources/application.conf
+++ b/employee-impl/src/main/resources/application.conf
@@ -1,14 +1,14 @@
 
 play.application.loader = com.codingkapoor.employee.core.EmployeeLoader
 
-employees.cassandra.keyspace = emp_mgmt
+employees.cassandra.keyspace = lagom_scala_slick
 
 cassandra-journal.keyspace = ${employees.cassandra.keyspace}
 cassandra-snapshot-store.keyspace = ${employees.cassandra.keyspace}
 
 db.default {
   driver = "com.mysql.jdbc.Driver"
-  url = "jdbc:mysql://localhost/emp_mgmt"
+  url = "jdbc:mysql://localhost/lagom_scala_slick"
   username = "codingkapoor"
   password = "codingkapoor"
 }
